infrastructure/kubernetes/5-frontend-deployment/1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: bones
spec:
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: react-app
                  image: <account-id>.dkr.ecr.us-east-1.amazonaws.com/bones:frontend
                  imagePullPolicy: Always # Force pull new image
                  resources:
                      limits:
                          cpu: 500m
                          memory: 512Mi
