infrastructure/kubernetes/5-frontend-deployment/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: bones
spec:
    type: ClusterIP
    ports:
        - protocol: TCP
          port: 80
    selector:
        app: frontend
