infrastructure/kubernetes/5-frontend-deployment/3-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend
    namespace: bones
    annotations:
        kubernetes.io/ingress.class: external-ingress # This should match /infrastructure/values/external-nginx.yaml
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
        nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
    ingressClassName: external-ingress # This should match /infrastructure/values/external-nginx.yaml
    rules:
        - host: akashdas.site
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: frontend
                            port:
                                number: 80
